syntax = "proto3";
package calc;

service Calculator{
    rpc CalculateDensity(DensityArguments) returns (DensityResponse);
}

message DensityArguments{
    float x = 1;
}

message DensityResponse{
    float result = 1;
}